--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
+    "styled-components": "^6.1.19",
     "three": "^0.152.2",
     "three-mesh-bvh": "^0.9.2",
     "three-stdlib": "^2.36.0"
@@ -32,6 +33,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "vite": "^5.4.2"
+    "vite": "^7.1.12"
   }
 }
