--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,8 +36,13 @@ SAFE_MODE_COOLDOWN=300
 MIN_TRANSACTION_VALUE=0.001
 GAS_THRESHOLD=50000
 
-# ===== ETHERSCAN API (for contract verification) =====
-ETHERSCAN_API_KEY=YOUR_ETHERSCAN_API_KEY
+# ===== BLOCKCHAIN API CONFIGURATION =====
+ETHERSCAN_API_KEY=YourEtherscanApiKeyToken
+INFURA_PROJECT_ID=your-infura-project-id
+
+# ===== AI CONFIGURATION =====
+AI_MODEL_UPDATE_INTERVAL=3600000
+FRAUD_DETECTION_THRESHOLD=0.85
 
 # ===== LOGGING CONFIGURATION =====
 LOG_LEVEL=info
