--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/three": "^0.180.0",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.13.1",
+    "chart.js": "^4.5.1",
+    "lit": "^3.3.1",
+    "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "styled-components": "^6.1.19",
+    "tailwindcss": "^4.1.16",
     "three": "^0.152.2",
     "three-mesh-bvh": "^0.9.2",
     "three-stdlib": "^2.36.0"
