--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "@types/three": "^0.180.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.5",
     "styled-components": "^6.1.19",
-    "three": "^0.152.2",
-    "three-mesh-bvh": "^0.9.2",
-    "three-stdlib": "^2.36.0"
+    "three": "^0.169.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
